--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
     "expo": "~43.0.2",
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.3",
+    "expo-file-system": "^13.0.3",
     "expo-font": "~10.0.3",
+    "expo-image-picker": "^11.0.3",
     "expo-linking": "~2.4.2",
+    "expo-media-library": "^13.0.3",
+    "expo-permissions": "^13.0.3",
+    "expo-secure-store": "^11.0.3",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-web-browser": "~10.0.3",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
