--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "expo": "~43.0.2",
+    "@sideway/address": "^4.1.2",
+    "expo": "^43.0.0",
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.3",
-    "expo-file-system": "^13.0.3",
+    "expo-file-system": "~13.0.3",
     "expo-font": "~10.0.3",
-    "expo-image-picker": "^11.0.3",
+    "expo-image-picker": "~11.0.3",
     "expo-linking": "~2.4.2",
-    "expo-media-library": "^13.0.3",
-    "expo-permissions": "^13.0.3",
-    "expo-secure-store": "^11.0.3",
+    "expo-media-library": "~13.0.3",
+    "expo-permissions": "~13.0.3",
+    "expo-secure-store": "~11.0.3",
+    "expo-sharing": "^10.0.3",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-web-browser": "~10.0.3",
@@ -33,7 +35,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-safe-area-context": "3.3.2",
+    "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1"
   },
@@ -41,7 +45,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "jest-expo": "~43.0.0",
+    "jest-expo": "^43.0.0",
     "typescript": "~4.3.5"
   },
   "private": true
