--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-ads-admob": "~11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
