--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Chatroom",
     "slug": "Chatroom",
-    "version": "1.1.1",
+    "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
@@ -26,11 +26,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "config": {
-        "googleMobileAdsAppId": "ca-app-pub-3185366657620430/1873326666"
-      },
-      "package": "com.subhashcool.Chatroom",
-       "versionCode":  1
+      "versionCode": 2,
+      "package": "com.subhashcool.Chatroom"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
