--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "@sideway/address": "^4.1.2",
     "expo": "^43.0.0",
+    "expo-ads-admob": "~11.0.3",
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.3",
     "expo-file-system": "~13.0.3",
@@ -39,8 +40,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1",
-    "expo-ads-admob": "~11.0.3"
+    "react-native-super-alert": "^0.1.0",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
