--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-image-picker": "~11.0.3",
     "expo-linking": "~2.4.2",
     "expo-media-library": "~13.0.3",
+    "expo-notifications": "^0.13.3",
     "expo-permissions": "~13.0.3",
     "expo-secure-store": "~11.0.3",
     "expo-sharing": "^10.0.3",
@@ -41,7 +42,9 @@
     "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "~3.8.0",
     "react-native-super-alert": "^0.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-scroll-to-bottom": "^4.2.0",
+    "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
